# Trading_platform

./: docker-compose.yaml  pyproject.toml
tradingplatform/: asgi.py  settings.py  urls.py  wsgi.py
tradingplatform/core/: admin.py  apps.py  models.py
tradingplatform/core/migrations/: 0001_initial.py
tradingplatform/links/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  views.py
tradingplatform/links/migrations/: 0001_initial.py  0002_alter_link_level_alter_link_provider.py  0003_alter_contact_options_alter_product_options_and_more.py  0004_remove_link_products_alter_link_provider_and_more.py
